<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.drapp.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        />
<item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        />
<item
        android:id="@+id/action_appointment"
        android:orderInCategory="100"
        android:title="@string/action_appointment"
        />
<item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        />
<item android:id="@+id/deconnexion"
     android:orderInCategory="100" 
     android:title="@string/action_dec"/>
</menu>
